Styled the categories

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
        <!-- navigation -->
       <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <a class="" href="index.html">
-            <img class="logo" src="logo.jpg" alt="logo">
+            <img class="logo" src="./images/logo.jpg" alt="logo">
         </a>
         <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -64,9 +64,8 @@
     <main>
       <section class="main-section">
         <div class="d-flex flex-column justify-content-center align-items-center py-5">
-          <i class="fas fa-paw white fa-3x"></i>
-          <h1 class="white text-uppercase pb-5">petworld</h1>
-          <span class="white">your pet, our passion</span>
+          <h1 class="white text-uppercase pb-5">celyn's boutique</h1>
+          <span class="white">best clothes found here</span>
         </div>
         <div class="search-bar">
           <form action="search.html" class="d-flex justify-content-center main-form py-5">
@@ -76,8 +75,12 @@
               Categories
             </button>
             <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-              <button class="dropdown-item" type="button">Dogs</button>
-              <button class="dropdown-item" type="button">Cats</button>
+              <button class="dropdown-item" type="button">Men</button>
+              <button class="dropdown-item" type="button">Women</button>
+              <button class="dropdown-item" type="button">Accessories</button>
+              <button class="dropdown-item" type="button">Handbags</button>
+              <button class="dropdown-item" type="button">Headwear</button>
+              
             </div>
             </div>
             <input type="text" placeholder="Search for products" class="text-area pl-2"/>
