Finished styling the aside section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     
-    <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="styles/index.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Abel&family=Lato&display=swap"
       rel="stylesheet"
@@ -62,7 +62,7 @@
         </nav>
         <section class="background">
             <div class="home-heading-con">
-              <img class="logo-img" src="/images/logo.jpg" alt="">
+              <img class="logo-img" src="/images/logo.jpg" alt="logo">
               <h1 class="home-heading text-white">Your clothes,our passion</h1>
             </div>
             <div class="search-bar">
