Added the search items

--- a/search.html
+++ b/search.html
@@ -62,8 +62,8 @@
             <button class="dropdown-item" type="button">Handbags</button>
 					</div>
 				</div>
-				<input type="text" placeholder="Accessories" class="pl-2"/>
-				<input type="text"  placeholder="$150 - $200" class="pl-2"/>
+				<input type="text" placeholder="women's cloths" class="pl-2"/>
+				<input type="text"  placeholder="$150 - $600" class="pl-2"/>
 				<button class="bg-dark text-white border-0 search-btn">Search</button>
 			</form>
         </div>
@@ -120,27 +120,27 @@
                 <div class="col border">
                     <div class="row border mb-2">
                         <div class="search-results px-3 pt-3">
-                            <p>About <b>300</b> search results for <b>"Yamaha Amplifier"</b> (0.62 seconds) </p>
+                            <p>About <b>200</b> search results for <b>"women'scloth"</b> (0.35 seconds) </p>
                         </div>
                     </div>
                     <div class="row border search-row">
                         <div class="col-3">
                             <div class="border-0 card-img-left">
-                                <a href="#"><img class="card-img-left w-100" src="./images/amplifier.png" alt="Speaker"></a>
+                                <a href="#"><img class="card-img-left w-100" src="./images/cloth1.jpg" alt="cloth1"></a>
                             </div>
                         </div>
                         <div class="col">
                             <div class="card-body">
-                                <div class="card-title font-weight-bolder"><h3><b>Japanese Amplifiier</b></h3></div>
+                                <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
                                 <div class="card-text">
-                                    <h6 class="font-weight-bold make pb-2">YAMAHA</h6>
+                                    <h6 class="font-weight-bold make pb-2">Uganda</h6>
                                     <h3 class="pb-3">
-                                        Advanced Switching Regulator and Engine Technology An advanced Yamaha switching regulator 
-                                        and high-efficiency Engine technology give the PC-1N Series amplifiers high-quality sound 
-                                        and exceptional power with dramatically reduced power consumption and a new compact size.
+                                      Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
+                                      Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
+                                      The piece can be styled with your favorite pair of heels for the perfect professional look. 
                                     </h3>
-                                    <p>Made in <span><b>Japan</b></span></p>
-                                    <p class="pt-3">First released on May, 2018</p>
+                                    <p>Made in <span><b>Uganda</b></span></p>
+                                    <p class="pt-3">First released on Jan, 2020</p>
                                 </div>
                                 <div class="dropup d-flex align-items-baseline justify-content-between">
                                     <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
@@ -160,103 +160,103 @@
                     <div class="row border search-row my-2">
                         <div class="col-3">
                             <div class="border-0 card-img-left">
-                                <a href="#"><img class="card-img-left w-100" src="./images/amplifier2.png" alt="Speaker"></a>
+                                <a href="#"><img class="card-img-left w-100" src="./images/cloth2.jpg" alt="Cloth2"></a>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card-body">
-                                <div class="card-title font-weight-bolder"><h3><b>Korean Amplifiier</b></h3></div>
-                                <div class="card-text">
-                                    <h6 class="font-weight-bold make pb-2">YAMAHA</h6>
-                                    <h3 class="pb-3">
-                                        Advanced Switching Regulator and Engine Technology An advanced Yamaha switching regulator 
-                                        and high-efficiency Engine technology give the PC-1N Series amplifiers high-quality sound 
-                                        and exceptional power with dramatically reduced power consumption and a new compact size.
-                                    </h3>
-                                    <p>Made in <span><b>Japan</b></span></p>
-                                    <p class="pt-3">First released on May, 2018</p>
-                                </div>
-                                <div class="dropup d-flex align-items-baseline justify-content-between">
-                                    <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        +
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item btn-dark" href="#">More Details</a>
-                                        <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
-                                    </div>
-                                    <h5 class="price">$320.00</h5>
-                                    <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
-                                </div>
-                            </div>
+                          <div class="card-body">
+                              <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
+                              <div class="card-text">
+                                  <h6 class="font-weight-bold make pb-2">Uganda</h6>
+                                  <h3 class="pb-3">
+                                    Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
+                                    Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
+                                    The piece can be styled with your favorite pair of heels for the perfect professional look. 
+                                  </h3>
+                                  <p>Made in <span><b>Uganda</b></span></p>
+                                  <p class="pt-3">First released on Jan, 2020</p>
+                              </div>
+                              <div class="dropup d-flex align-items-baseline justify-content-between">
+                                  <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                      aria-expanded="false">
+                                      +
+                                  </button>
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                      <a class="dropdown-item btn-dark" href="#">More Details</a>
+                                      <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
+                                  </div>
+                                  <h5 class="price">$320.00</h5>
+                                  <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
+                              </div>
+                          </div>
                         </div>
                     </div>
                     <div class="row border search-row my-2">
                         <div class="col-3">
                             <div class="border-0 card-img-left">
-                                <a href="#"><img class="card-img-left w-100" src="./images/amplifier.png" alt="Speaker"></a>
+                                <a href="#"><img class="card-img-left w-100" src="./images/cloth4.jpg" alt="Cloth4"></a>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card-body">
-                                <div class="card-title font-weight-bolder"><h3><b>Japanese Amplifiier</b></h3></div>
-                                <div class="card-text">
-                                    <h6 class="font-weight-bold make pb-2">YAMAHA</h6>
-                                    <h3 class="pb-3">
-                                        Advanced Switching Regulator and Engine Technology An advanced Yamaha switching regulator 
-                                        and high-efficiency Engine technology give the PC-1N Series amplifiers high-quality sound 
-                                        and exceptional power with dramatically reduced power consumption and a new compact size.
-                                    </h3>
-                                    <p>Made in <span><b>Japan</b></span></p>
-                                    <p class="pt-3">First released on May, 2018</p>
-                                </div>
-                                <div class="dropup d-flex align-items-baseline justify-content-between">
-                                    <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        +
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item btn-dark" href="#">More Details</a>
-                                        <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
-                                    </div>
-                                    <h5 class="price">$320.00</h5>
-                                    <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
-                                </div>
-                            </div>
+                          <div class="card-body">
+                              <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
+                              <div class="card-text">
+                                  <h6 class="font-weight-bold make pb-2">Uganda</h6>
+                                  <h3 class="pb-3">
+                                    Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
+                                    Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
+                                    The piece can be styled with your favorite pair of heels for the perfect professional look. 
+                                  </h3>
+                                  <p>Made in <span><b>Uganda</b></span></p>
+                                  <p class="pt-3">First released on Jan, 2020</p>
+                              </div>
+                              <div class="dropup d-flex align-items-baseline justify-content-between">
+                                  <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                      aria-expanded="false">
+                                      +
+                                  </button>
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                      <a class="dropdown-item btn-dark" href="#">More Details</a>
+                                      <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
+                                  </div>
+                                  <h5 class="price">$320.00</h5>
+                                  <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
+                              </div>
+                          </div>
                         </div>
                     </div>
                     <div class="row border search-row my-2">
                         <div class="col-3">
                             <div class="border-0 card-img-left">
-                                <a href="#"><img class="card-img-left w-100" src="./images/amplifier2.png" alt="Speaker"></a>
+                                <a href="#"><img class="card-img-left w-100" src="./images/cloth3.jpg" alt="cloth3"></a>
                             </div>
                         </div>
                         <div class="col">
-                            <div class="card-body">
-                                <div class="card-title font-weight-bolder"><h3><b>Korean Amplifiier</b></h3></div>
-                                <div class="card-text">
-                                    <h6 class="font-weight-bold make pb-2">YAMAHA</h6>
-                                    <h3 class="pb-3">
-                                        Advanced Switching Regulator and Engine Technology An advanced Yamaha switching regulator 
-                                        and high-efficiency Engine technology give the PC-1N Series amplifiers high-quality sound 
-                                        and exceptional power with dramatically reduced power consumption and a new compact size.
-                                    </h3>
-                                    <p>Made in <span><b>Japan</b></span></p>
-                                    <p class="pt-3">First released on May, 2018</p>
-                                </div>
-                                <div class="dropup d-flex align-items-baseline justify-content-between">
-                                    <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        +
-                                    </button>
-                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                        <a class="dropdown-item btn-dark" href="#">More Details</a>
-                                        <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
-                                    </div>
-                                    <h5 class="price">$320.00</h5>
-                                    <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
-                                </div>
-                            </div>
+                          <div class="card-body">
+                              <div class="card-title font-weight-bolder"><h3><b>African dress</b></h3></div>
+                              <div class="card-text">
+                                  <h6 class="font-weight-bold make pb-2">Uganda</h6>
+                                  <h3 class="pb-3">
+                                    Ladies can dress to impress in our Aria African print midi wrap dress in yellow navy multipattern print.
+                                    Our gorgeous wrap dress is the vibrant and colorful piece missing from your closet. 
+                                    The piece can be styled with your favorite pair of heels for the perfect professional look. 
+                                  </h3>
+                                  <p>Made in <span><b>Uganda</b></span></p>
+                                  <p class="pt-3">First released on Jan, 2020</p>
+                              </div>
+                              <div class="dropup d-flex align-items-baseline justify-content-between">
+                                  <button class="btn bg-light" type="button" data-toggle="dropdown" aria-haspopup="true"
+                                      aria-expanded="false">
+                                      +
+                                  </button>
+                                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownMenuButton">
+                                      <a class="dropdown-item btn-dark" href="#">More Details</a>
+                                      <a class="dropdown-item btn-dark" href="#">Rate this Product</a>
+                                  </div>
+                                  <h5 class="price">$320.00</h5>
+                                  <button class="btn cart"><i class="fa fa-cart-plus" aria-hidden="true"></i> ADD TO CART</button>
+                              </div>
+                          </div>
                         </div>
                     </div>
                     <div class="other-pages py-4">     
@@ -282,7 +282,7 @@
     <footer class="mt-4">
         <div class="footer-top pb-3">
             <div>
-                <a href="index.html"><img class="footer-logo" src="./images/logo.png" alt="Footer-Logo"></a>
+                <a href="index.html"><img class="footer-logo" src="./images/logo.jpg" alt="Footer-Logo"></a>
             </div>
             <div class="socials pt-2">
                 <a href="#"><i class="fab fa-facebook"></i></a>
@@ -298,7 +298,7 @@
                     <h2 class="help">GET IN TOUCH</h2>
                     <div class="pt-3">
                         <i class="fa fa-truck" aria-hidden="true"></i>
-                        <span><b>Lagos:</b> 505 Bode Thomas Road Surulere.</span>
+                        <span><b>Kampala:</b> Kololo.</span>
                     </div>
                     <br>
                     <span class="pl-4"> <b>Port Harcourt:</b> 121 George Washington Street.</span>
