Styled the search results

--- a/search.html
+++ b/search.html
@@ -71,7 +71,7 @@
     <!-- main section -->
     <main class="bg-light my-3 mx-4">
         <div class="container-fluid">
-            <div class="row search-main">
+            <div class="row search-item">
                 <div class="col-3 border aside">
                     <aside>
                         <h5 class="pt-3 pb-2 font-weight-bolder ">Category</h5>
