Styled the footer

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
             <ul class="footer-list pb-3">
                 <li class="list pr-2">Copyright &copy; 2020 - </li>
                 <li class="pr-2">All rights reserved.</li>
-                <li> Powered by Jaz-Tech.</li>
+                <li> Powered by Celyn-Tech.</li>
             </ul>
         </div>
     </footer>
