--- a/search.html
+++ b/search.html
@@ -298,13 +298,13 @@
                     <h2 class="help">GET IN TOUCH</h2>
                     <div class="pt-3">
                         <i class="fa fa-truck" aria-hidden="true"></i>
-                        <span><b>Kampala:</b> Kololo.</span>
+                        <span><b>Kampala:</b>Plot 11 Kololo.</span>
                     </div>
                     <br>
-                    <span class="pl-4"> <b>Port Harcourt:</b> 121 George Washington Street.</span>
+                    <span class="pl-4"> <b>Wampewo Avenue:</b> Plot 16.</span>
                     <div class="py-3">
                         <i class="fa fa-phone" aria-hidden="true"></i>
-                        <span>+2348012345678</span>
+                        <span>+256774500675</span>
                     </div>
                 </div>
                 <div class="footer-bottom-info">
@@ -366,7 +366,7 @@
             <ul class="footer-list pb-3">
                 <li class="list pr-2">Copyright &copy; 2020 - </li>
                 <li class="pr-2">All rights reserved.</li>
-                <li> Powered by Jaz-Tech.</li>
+                <li> Powered by Celyn-Tech.</li>
             </ul>
         </div>
     </footer>
