fixed the search-bar

--- a/about.html
+++ b/about.html
@@ -16,32 +16,32 @@
     <div class="main-container">
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
-          <a class="" href="index.html">
-              <img class="logo" src="./images/logo.jpg" alt="logo">
-          </a>
-          <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-          <ul class="navbar-nav align-items-center font-weight-bold nav-list">
-              <li class="nav-item pb-1 pr-3">
-              <a class="nav-list" href="index.html"><i class="fas fa-home"></i> HOME</a>
-              </li>
-              <li class="nav-item pb-1">
-              <a class="nav-list" href="about.html"><i class="fas fa-columns"></i> ABOUT</a>
-              </li>
-              <li class="nav-item pb-1">
-                  <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart"></i> CHECKOUT</a>
-              </li>
-              <li><button class="btn text-white">POST AN AD</button></li>
-          </ul>
-          </div>
-          <div class="nav-list d-none d-lg-flex">
-              <a href="#">
-                  <i class="far fa-envelope"></i>
-                  jmagero@gmail.com
-              </a>
-          </div>
+            <a class="" href="index.html">
+                <img class="logo" src="./images/logo.jpg" alt="logo">
+            </a>
+            <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+            <ul class="navbar-nav align-items-center font-weight-bold nav-list">
+                <li class="nav-item pb-1 pr-3">
+                <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
+                </li>
+                <li class="nav-item pb-1">
+                <a class="nav-list" href="about.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
+                </li>
+                <li class="nav-item pb-1">
+                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
+                </li>
+                <li><button class="btn text-white">POST AN AD</button></li>
+            </ul>
+            </div>
+            <div class="nav-list d-none d-lg-flex">
+                <a href="#">
+                    <i class="fas fa-user"></i>
+                    jmagero
+                </a>
+            </div>
         </nav>
     <section class="background">
         <div class="heading">
