--- a/search.html
+++ b/search.html
@@ -20,52 +20,52 @@
                 <img class="logo" src="./images/logo.jpg" alt="logo">
             </a>
             <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
-              <ul class="navbar-nav align-items-center font-weight-bold nav-list">
-                <li class="nav-item home pb-1 pr-3">
-                  <a class="nav-list" href="index.html"><i class="fas fa-home"></i> HOME</a>
+            <ul class="navbar-nav align-items-center font-weight-bold nav-list">
+                <li class="nav-item pb-1 pr-3">
+                <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
                 </li>
                 <li class="nav-item pb-1">
-                  <a class="nav-list" href="about.html"><i class="fas fa-columns"></i> ABOUT</a>
+                <a class="nav-list" href="about.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
                 </li>
                 <li class="nav-item pb-1">
-                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart"></i> CHECKOUT</a>
+                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
                 </li>
                 <li><button class="btn text-white">POST AN AD</button></li>
-              </ul>
+            </ul>
             </div>
             <div class="nav-list d-none d-lg-flex">
                 <a href="#">
-                    <i class="far fa-envelope"></i>
-                    Jamezjaz@gmail.com
+                    <i class="fas fa-user"></i>
+                    jmagero
                 </a>
             </div>
-          </nav>
+        </nav>
     <section class="background">
         <div class="heading">
             <img class="logo-img" src="/images/logo.jpg" alt="logo">
-		    `   <p class="text-white">Over 120,000 items on stock!</p>
+		    <p class="text-white">Over 120,000 items available!</p>
         </div>
         <div class="search-bar">
             <form action="search.html" class="d-flex justify-content-center main-form">
-				<div class="dropdown">
-					<button class="btn bg-white dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
-						aria-haspopup="true" aria-expanded="false">
-						Categories
-					</button>
-					<div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-						<button class="dropdown-item" type="button">Men</button>
-						<button class="dropdown-item" type="button">Women</button>
-            <button class="dropdown-item" type="button">Accessories</button>
-            <button class="dropdown-item" type="button">Handbags</button>
-					</div>
-				</div>
-				<input type="text" placeholder="women's cloths" class="pl-2"/>
-				<input type="text"  placeholder="$150 - $600" class="pl-2"/>
-				<button class="bg-dark text-white border-0 search-btn">Search</button>
-			</form>
+                <div class="dropdown">
+                    <button class="btn bg-white dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        Categories
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                        <button class="dropdown-item" type="button">Men</button>
+                        <button class="dropdown-item" type="button">Women</button>
+                        <button class="dropdown-item" type="button">Handbag</button>
+                        <button class="dropdown-item" type="button">Accessories</button>
+                    </div>
+                </div>
+                <input type="text" placeholder="Search skirts,tops" class="text-area px-2 mx-1">
+                <input type="text"  placeholder="price" class="text-area px-2">
+                <button class="bg-dark text-white border-0 search-btn">Search</button>
+            </form>
         </div>
     </section>
     <!-- main section -->
