--- a/index.html
+++ b/index.html
@@ -42,21 +42,21 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
             <ul class="navbar-nav align-items-center font-weight-bold nav-list">
                 <li class="nav-item pb-1 pr-3">
-                <a class="nav-list" href="index.html"><i class="fas fa-home"></i> HOME</a>
+                <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
                 </li>
                 <li class="nav-item pb-1">
-                <a class="nav-list" href="about.html"><i class="fas fa-columns"></i> ABOUT</a>
+                <a class="nav-list" href="about.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
                 </li>
                 <li class="nav-item pb-1">
-                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart"></i> CHECKOUT</a>
+                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
                 </li>
                 <li><button class="btn text-white">POST AN AD</button></li>
             </ul>
             </div>
             <div class="nav-list d-none d-lg-flex">
                 <a href="#">
-                    <i class="far fa-envelope"></i>
-                    jmagero@gmail.com
+                    <i class="fas fa-user"></i>
+                    jmagero
                 </a>
             </div>
         </nav>
@@ -79,8 +79,8 @@
                             <button class="dropdown-item" type="button">Accessories</button>
                         </div>
                     </div>
-                    <input type="text" placeholder="Search for products" class="text-area pl-2"/>
-                    <input type="text"  placeholder="Location" class="text-area pl-2"/>
+                    <input type="text" placeholder="Search skirts,tops" class="text-area px-2 mx-1">
+                    <input type="text"  placeholder="price" class="text-area px-2">
                     <button class="bg-dark text-white border-0 search-btn">Search</button>
                 </form>
             </div>
@@ -106,29 +106,29 @@
                     </div>
                     <div class="carousel-item">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image2.jpg" alt="Guitar"/>
+                            <img src="./images/ad-image2.jpg" alt="earrings">
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Earrings</h2>
                                 <p>
                                   SANSHOOR 6cm Printed African Wood Drop Earrings 
                                   With Headwrap Woman Pattern Black Ethnic Jewelry For Women Christmas Gift 1Pair
                                 </p>
-                                <p class="inventor py-2"><b>By:</b> Africa.</p>
+                                <p class="inventor py-2"><b>made from:</b> Africa.</p>
                                 <p class="pb-2"><b>Location:</b> Kampala,</p>
-                                <button class="btn">Buy $500</button>
+                                <button class="btn">Buy $300</button>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="d-block d-md-flex carousel-pad">
-                            <img src="./images/ad-image3.jpg" alt="Drum"/>
+                            <img src="./images/ad-image3.jpg" alt="headwear">
                             <div class="carousel-body pl-4">
                                 <h2 class="font-weight-bold title pb-2">Headwear</h2>
                                 <p> African Headtie Print Headwrap Ankara Wax Fabric 100% Pure 
                                   Cotton Scarf Kente Scarves Dashiki Printing For Women
                                 </p>
-                                <p class="inventor py-2"><b>By:</b> Bartolomeo Cristofori.</p>
-                                <p class="pb-2"><b>Location:</b> Florence, Italy</p>
+                                <p class="inventor py-2"><b>made from:</b> Africa</p>
+                                <p class="pb-2"><b>Location:</b> Kampala,Uganda</p>
                                 <button class="btn">Buy $500</button>
                             </div>
                         </div>
@@ -139,7 +139,6 @@
         </section>
     <!-- main section -->
     <main class="bg-light">
-        <!-- first row -->
         <div>
             <div class="border-bottom my-3 mx-3">
                 <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,clothes)</span></h2>
@@ -245,7 +244,7 @@
                 <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
-        <!-- second row -->
+        
         <div>
             <div class="border-bottom my-3 mx-3">
               <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
