Fixed the footer

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <title>celyn's clothing store</title>
   </head>
-  <body class="container">
+  <body>
     <div class="main-container">
         <!-- navigation -->
         <nav class="navbar navbar-expand-lg navbar-light sticky-top">
@@ -45,10 +45,10 @@
                 <a class="nav-list" href="index.html"><i class="fas fa-home fa-1x"></i> HOME</a>
                 </li>
                 <li class="nav-item pb-1">
-                <a class="nav-list" href="about.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
+                <a class="nav-list" href="index.html"><i class="fas fa-columns fa-1x"></i> ABOUT</a>
                 </li>
                 <li class="nav-item pb-1">
-                    <a class="nav-list" href="about.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
+                    <a class="nav-list" href="index.html"><i class="fas fa-shopping-cart fa-1x"></i> CHECKOUT</a>
                 </li>
                 <li><button class="btn text-white">POST AN AD</button></li>
             </ul>
@@ -244,7 +244,7 @@
                 <div class="arrow d-none d-md-block"><a href="#" class="fas fa-chevron-right"></a></div>
             </div>
         </div>
-        
+
         <div>
             <div class="border-bottom my-3 mx-3">
               <h2><i class="fas fa-tshirt"></i><b>Clothing</b> <span>(headwear,accesories)</span></h2>
@@ -384,7 +384,7 @@
         <div class="footer-bottom py-3">
             <div class="flex-container">
                 <div class="footer-bottom-info">
-                    <h2 class="help">GET IN TOUCH</h2>
+                    <h2 class="get">GET IN TOUCH</h2>
                     <div class="pt-3">
                         <i class="fa fa-truck" aria-hidden="true"></i>
                         <span><b>Kampala:</b> Plot 11 Kololo.</span>
@@ -397,13 +397,13 @@
                     </div>
                 </div>
                 <div class="footer-bottom-info">
-                    <h2 class="help">HELP & SUPPORT</h2>
+                    <h2 class="get">SUPPORT</h2>
                     <div class="pt-3">
                         <div>
-                            <span><a href="#">FAQs</a></span>
+                            <span><a href="#">Privacy Statement</a></span>
                         </div>
                         <div class="pt-2">
-                            <span><a href="#">Newsletter</a></span>
+                            <span><a href="#">Delivery Information</a></span>
                         </div>
                         <div class="pt-2">
                             <span><a href="#">Contact Us</a></span>
@@ -413,16 +413,13 @@
             </div>
             <div class="flex-container">
                 <div class="footer-bottom-info">
-                    <h2 class="help">COMPANY INFORMATION</h2>
+                    <h2 class="get">COMPANY INFORMATION</h2>
                     <div class="pt-3">
                         <div>
                             <span><a href="about.html">About Us</a></span>
                         </div>
                         <div class="pt-2">
-                            <span><a href="#">Career Opportunities</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Privacy Policy</a></span>
+                            <span><a href="#">Order Lookup</a></span>
                         </div>
                         <div class="py-2">
                             <span><a href="#">Terms & Conditions</a></span>
@@ -430,19 +427,9 @@
                     </div>
                 </div>
                 <div class="footer-bottom-info">
-                    <h2 class="help">OPENING HOURS</h2>
+                    <h2 class="get">OPENING HOURS</h2>
                     <div class="pt-3">
                         <div>
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
-                        </div>
-                        <div class="pt-2">
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
-                        </div>
-                        <div class="pt-2">
                             <span>Monday - Friday</span>
                             <br>
                             <small>8am to 5pm</small>
@@ -455,7 +442,6 @@
             <ul class="footer-list pb-3">
                 <li class="list pr-2">Copyright &copy; 2020 - </li>
                 <li class="pr-2">All rights reserved.</li>
-                <li> Powered by Celyn-Tech.</li>
             </ul>
         </div>
     </footer>
@@ -463,5 +449,5 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </div>
-</body>
+  </body>
 </html>
