--- a/search.html
+++ b/search.html
@@ -295,10 +295,10 @@
         <div class="footer-bottom py-3">
             <div class="flex-container">
                 <div class="footer-bottom-info">
-                    <h2 class="help">GET IN TOUCH</h2>
+                    <h2 class="get">GET IN TOUCH</h2>
                     <div class="pt-3">
                         <i class="fa fa-truck" aria-hidden="true"></i>
-                        <span><b>Kampala:</b>Plot 11 Kololo.</span>
+                        <span><b>Kampala:</b> Plot 11 Kololo.</span>
                     </div>
                     <br>
                     <span class="pl-4"> <b>Wampewo Avenue:</b> Plot 16.</span>
@@ -308,13 +308,13 @@
                     </div>
                 </div>
                 <div class="footer-bottom-info">
-                    <h2 class="help">HELP & SUPPORT</h2>
+                    <h2 class="get">SUPPORT</h2>
                     <div class="pt-3">
                         <div>
-                            <span><a href="#">FAQs</a></span>
+                            <span><a href="#">Privacy Statement</a></span>
                         </div>
                         <div class="pt-2">
-                            <span><a href="#">Newsletter</a></span>
+                            <span><a href="#">Delivery Information</a></span>
                         </div>
                         <div class="pt-2">
                             <span><a href="#">Contact Us</a></span>
@@ -324,16 +324,13 @@
             </div>
             <div class="flex-container">
                 <div class="footer-bottom-info">
-                    <h2 class="help">COMPANY INFORMATION</h2>
+                    <h2 class="get">COMPANY INFORMATION</h2>
                     <div class="pt-3">
                         <div>
                             <span><a href="about.html">About Us</a></span>
                         </div>
                         <div class="pt-2">
-                            <span><a href="#">Career Opportunities</a></span>
-                        </div>
-                        <div class="pt-2">
-                            <span><a href="#">Privacy Policy</a></span>
+                            <span><a href="#">Order Lookup</a></span>
                         </div>
                         <div class="py-2">
                             <span><a href="#">Terms & Conditions</a></span>
@@ -341,19 +338,9 @@
                     </div>
                 </div>
                 <div class="footer-bottom-info">
-                    <h2 class="help">OPENING HOURS</h2>
+                    <h2 class="get">OPENING HOURS</h2>
                     <div class="pt-3">
                         <div>
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
-                        </div>
-                        <div class="pt-2">
-                            <span>Monday - Friday</span>
-                            <br>
-                            <small>8am to 5pm</small>
-                        </div>
-                        <div class="pt-2">
                             <span>Monday - Friday</span>
                             <br>
                             <small>8am to 5pm</small>
@@ -366,7 +353,6 @@
             <ul class="footer-list pb-3">
                 <li class="list pr-2">Copyright &copy; 2020 - </li>
                 <li class="pr-2">All rights reserved.</li>
-                <li> Powered by Celyn-Tech.</li>
             </ul>
         </div>
     </footer>
